
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ red; } ;
typedef TYPE_1__ RBNode ;



__attribute__((used)) static inline bool red(RBNode *x) {
 return x && x->red;
}
